--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
-    <div class="box">I use the standard box model.</div>
-    <div class="box alternate">I use the alternate box model.</div>
+    <nav>
+      <ul>
+        <li><a href="#">Starting Page</a></li>
+        <li><a href="./common/page-two.html">Page Two</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="box">I use the standard box model.</div>
+      <div class="box alternate">I use the alternate box model.</div>
+    </main>
   </body>
 </html>
