The Box Model Three

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
       <ul>
         <li><a href="#">Starting Page</a></li>
         <li><a href="./common/page-two.html">Page Two</a></li>
+        <li><a href="./common/page-three.html">Page Three</a></li>
       </ul>
     </nav>
     <main>
