--- a/app/common/page-two.html
+++ b/app/common/page-two.html
@@ -10,6 +10,7 @@
       <ul>
         <li><a href="../index.html">Starting Page</a></li>
         <li><a href="#">Page Two</a></li>
+        <li><a href="./page-three.html">Page Three</a></li>
       </ul>
     </nav>
     <main>
